[gd_scene load_steps=5 format=3 uid="uid://b5wiob1qsvgme"]

[ext_resource type="Script" path="res://Scenes/Screens/Overworld/overworld_manager.gd" id="1_b4646"]
[ext_resource type="PackedScene" uid="uid://meys4iq7byla" path="res://Scenes/Component/Player_Overworld/Player_Overworld.tscn" id="1_nkdty"]
[ext_resource type="PackedScene" uid="uid://kbfxir70fqor" path="res://Scenes/Component/Encounter/Encoutner.tscn" id="2_4pktn"]
[ext_resource type="PackedScene" uid="uid://i78lmxhc0t8l" path="res://Scenes/Component/ModalEncounterInfo/modal_encounter_info.tscn" id="3_sw3xe"]

[node name="Overworld" type="Node"]

[node name="OverworldManager" type="Node" parent="."]
script = ExtResource("1_b4646")
encounter = ExtResource("2_4pktn")
maxDepth = 4
maxWidth = 2

[node name="OverworldContent" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Player" parent="OverworldContent" instance=ExtResource("1_nkdty")]
unique_name_in_owner = true
top_level = true
position = Vector2(610, 72)

[node name="OverworldUi" type="CanvasLayer" parent="OverworldContent"]

[node name="HBoxContainer" type="HBoxContainer" parent="OverworldContent/OverworldUi"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Placeholder" type="Label" parent="OverworldContent/OverworldUi/HBoxContainer"]
layout_mode = 2
text = "Welcome to the overworld"

[node name="Items" type="Label" parent="OverworldContent/OverworldUi/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Items will go here"
horizontal_alignment = 1

[node name="PlayerInfo" type="Label" parent="OverworldContent/OverworldUi/HBoxContainer"]
layout_mode = 2
text = "Player Info Here"
horizontal_alignment = 2

[node name="Map" type="Control" parent="OverworldContent"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="ModalEncounterInfo" parent="OverworldContent" instance=ExtResource("3_sw3xe")]
unique_name_in_owner = true

[node name="ActiveEncounter" type="Node" parent="."]
unique_name_in_owner = true
